--- a/BOIRNul.CSharp.csproj
+++ b/BOIRNul.CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\FlyScript.cs" />
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Shoot.cs" />
   </ItemGroup>
